style.css
:root {
  --primary-color: #659365;
  --secondary-color: #073340;
  --font-size-medium: 1.125rem;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

img {
  max-width: 100%;
}

body {
  font-family: sans-serif;
}

.overflow-hidden {
  overflow: hidden;
}

header {
  display: flex;
  flex-direction: column;
  background: linear-gradient(
    to right,
    var(--primary-color),
    var(--secondary-color)
  );
  min-height: 100vh;
  padding: 0 25px;
  align-items: center;
}

nav {
  position: relative;
  display: flex;
  padding-top: 60px;
  justify-content: space-between;
  align-items: start;
  color: #fff;
  max-width: 1200px;
  width: 100%;
}

.logo {
  font-size: 1.5rem;
}

.nav-links {
  display: none;
}

.btn-contact {
  width: 100px;
  font-size: 13px;
  font-weight: 600;
  background-color: #b9f2a1;
  padding: 10px 15px;
  border-radius: 10px;
  border: none;
  outline: none;
}

@media screen and (max-width: 900px) {
  .nav-links {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    list-style: none;
    gap: 32px;
    width: 100%;
    position: fixed;
    left: -100%;
    top: 0;
    right: 0;
    bottom: 0;
    background: linear-gradient(
      to right,
      var(--primary-color),
      var(--secondary-color)
    );
    transition: 0.5s;
  }

  .transformed {
    left: 0;
  }

  .nav-links li {
    width: 100%;
    max-width: 200px;
    height: 40px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #073340;
    border-radius: 10px;
  }

  .nav-links li a {
    text-decoration: none;
    color: #fff;
  }
}

.ham-icon {
  z-index: 10;
}

@media screen and (min-width: 900px) {
  .nav-links {
    display: flex;
    list-style-type: none;
    gap: 24px;
  }

  .nav-links li a {
    text-decoration: none;
    color: #fff;
    font-weight: 500;
    font-size: var(--font-size-medium);
  }

  .nav-links li a:hover {
    color: #b9f2a1;
  }

  .ham-icon {
    display: none;
  }
}

.hero {
  color: #fff;
  padding-top: 80px;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 40px;
}

.introduction-text {
  text-align: center;
}

.introduction-text h1 {
  font-size: 2.2rem;
}

.introduction-text p {
  padding-top: 30px;
  font-size: 0.875rem;
  font-weight: 500;
}

.text-green-light {
  color: #b9f2a1;
}

.marketing-image {
  padding-top: 30px;
}

.hero-buttons {
  display: flex;
  flex-direction: column;
  padding-top: 30px;
  padding-bottom: 30px;
  align-items: center;
  gap: 15px;
}

.hero-buttons button {
  width: 200px;
  padding: 15px 40px;
  border-radius: 10px;
  outline: none;
  border: none;
  font-weight: 600;
}

.hero-buttons .get-started {
  background-color: #b9f2a1;
}

.hero-buttons .explore-more {
  border: 2px solid #b9f2a1;
  background-color: transparent;
  color: #fff;
}

@media screen and (min-width: 1000px) {
  .hero {
    flex-direction: row;
  }

  .hero .introduction-text {
    text-align: left;
  }

  .hero-buttons {
    align-items: start;
  }

  .introduction-text h1 {
    font-size: 3rem;
    max-width: 600px;
  }
}

